[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/TileMap.tres" type="TileSet" id=2]
[ext_resource path="res://images/icons/level_icon.png" type="Texture" id=3]
[ext_resource path="res://images/icons/menu_icon.png" type="Texture" id=4]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.654902 )

[node name="Control" type="CanvasLayer"]
layer = 2
script = ExtResource( 5 )

[node name="FullRect" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="FullRect"]
modulate = Color( 0.294118, 0.290196, 0.290196, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( 458768, 1, 0, 458771, 1, 0, 458772, 5, 0, 458773, 4, 0, 524303, -1073741820, 0, 524304, -1610612732, 0, 524308, 2, 0, 524309, 1610612740, 0, 524310, -1073741823, 0, 589838, -1610612734, 0, 589839, -1073741819, 0, 655375, 1610612740, 0, 655376, 1610612741, 0, 655377, 1610612737, 0, 786455, 1610612738, 0, 851982, 1610612736, 0, 851991, 1610612736, 0, 851992, -1610612735, 0, 917518, -1610612731, 0, 983053, -1610612735, 0, 983054, -1610612732, 0 )

[node name="CenterContainer" type="CenterContainer" parent="FullRect"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VB" type="VBoxContainer" parent="FullRect/CenterContainer"]
margin_left = 807.0
margin_top = 292.0
margin_right = 1112.0
margin_bottom = 787.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="MarginContainer" parent="FullRect/CenterContainer/VB"]
margin_right = 305.0
margin_bottom = 63.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="FullRect/CenterContainer/VB/Title"]
margin_left = 10.0
margin_top = 10.0
margin_right = 295.0
margin_bottom = 53.0
theme = ExtResource( 1 )
text = "Tile's Story"
align = 1
valign = 1

[node name="Quit" type="MarginContainer" parent="FullRect/CenterContainer/VB"]
margin_top = 163.0
margin_right = 305.0
margin_bottom = 252.0
theme = ExtResource( 1 )

[node name="HB" type="HBoxContainer" parent="FullRect/CenterContainer/VB/Quit"]
margin_left = 10.0
margin_top = 10.0
margin_right = 295.0
margin_bottom = 79.0
alignment = 1

[node name="MC2" type="MarginContainer" parent="FullRect/CenterContainer/VB/Quit/HB"]
margin_left = 74.0
margin_right = 211.0
margin_bottom = 69.0
theme = ExtResource( 1 )

[node name="QuitButton" type="Button" parent="FullRect/CenterContainer/VB/Quit/HB/MC2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 127.0
margin_bottom = 59.0
theme = ExtResource( 1 )
text = "Quit"
icon = ExtResource( 4 )

[node name="LevelSelection" type="MarginContainer" parent="FullRect/CenterContainer/VB"]
margin_top = 352.0
margin_right = 305.0
margin_bottom = 495.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullRect/CenterContainer/VB/LevelSelection"]
margin_left = 10.0
margin_top = 10.0
margin_right = 295.0
margin_bottom = 133.0
alignment = 1

[node name="Label" type="Label" parent="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer"]
margin_right = 285.0
margin_bottom = 43.0
theme = ExtResource( 1 )
text = "Level selection"
align = 1

[node name="HB" type="HBoxContainer" parent="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer"]
margin_top = 47.0
margin_right = 285.0
margin_bottom = 123.0
alignment = 1

[node name="MC" type="MarginContainer" parent="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer/HB"]
margin_left = 37.0
margin_right = 140.0
margin_bottom = 76.0
theme = ExtResource( 1 )

[node name="Level0" type="Button" parent="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer/HB/MC"]
margin_left = 10.0
margin_top = 10.0
margin_right = 93.0
margin_bottom = 66.0
theme = ExtResource( 1 )
text = "0"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC2" type="MarginContainer" parent="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer/HB"]
margin_left = 144.0
margin_right = 247.0
margin_bottom = 76.0
theme = ExtResource( 1 )

[node name="Level1" type="Button" parent="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer/HB/MC2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 93.0
margin_bottom = 66.0
theme = ExtResource( 1 )
text = "1"
icon = ExtResource( 3 )

[connection signal="pressed" from="FullRect/CenterContainer/VB/Quit/HB/MC2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer/HB/MC/Level0" to="." method="_on_Level0_pressed"]
[connection signal="pressed" from="FullRect/CenterContainer/VB/LevelSelection/VBoxContainer/HB/MC2/Level1" to="." method="_on_Level1_pressed"]
